# commonplace

./: .gitignore  README.md  pyproject.toml
commonplace/: __init__.py
commonplace/core/: __init__.py  core.py
commonplace/management/: __init__.py  parser.py
commonplace/ui/: __init__.py
commonplace/utils/: __init__.py  basic_utils.py
config/: definitions.yaml
docs/: CONTRIBUTING.md  HISTORY.md  IDEAS.md  PHILOSOPHY.md  SPECIFICATIONS.md  TEMP.md  markdown_docs_setup.py
explore/: README.md  editor-first.py  other.md  parser-first.py  storage-first.py
modules/: __init__.py
src/commonplace/: config.py  constants.py  models.py  playground.py  utils.py
