[build-system]
requires = ["setuptools>=65.0", "wheel"] # Need to check
build-backend = "hatchling.build" # Need to check

[project]
name = "commonplace"
version = "0.1.0"
description = "An intuitive but fully customizable note taking app."
readme = "README.md"
requires-python = ">=3.8"
# license = {text = "Pending"}  # Need to decide
authors = [
    {name = "David Jiménez", email = "djimenez81@gmail.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", # examples, I might use them.
    # Add your runtime dependencies
]
